# VISIONTAP

./: .gitignore  CMakeLists.txt  ThreadBase.cpp  ThreadBase.h  Thread_Tikok.cpp  Thread_Tikok.h  app_tiktok.cpp  app_tiktok.h  cmake_install.cmake  http_utils.cpp  http_utils.h  json_utils.cpp  json_utils.h  machine_vision.cpp  machine_vision.h  main.cpp  md5.cpp  md5.h  mqtt_thread.cpp  mqtt_thread.h  mqtt_utils.cpp  mqtt_utils.h  opencv_utils.cpp  opencv_utils.h  public_def.h  pulic_def.h  screen_tap.cpp  screen_tap.h
tapele/: clean_visionser.sh  compress.sh  getagpsdata.sh  launch.sh  process_monitor.c  setenv.sh  taptools.sh  vendor_file_contexts  visionkeeper.bak  zjh.sh
tapele/code_d/: a.out
tapele/daemon/: process_monitor.c  visionkeeper
tapele/upgrade_package/: launch.sh
upgrade_package/: cv_exe  launch.sh
